--- a/slides.qmd
+++ b/slides.qmd
@@ -53,7 +53,7 @@ gg_color_hue <- function(n) {
 
 &nbsp;
 
-Exposure to gun violence, pervasive but varies widely by...
+Exposure to gun violence is pervasive but varies by...
 
 * Birth cohort
 * Race
@@ -83,7 +83,7 @@ Gun carrying follows two age-specific patterns:
 * Exposure predicts adolescent but not adult gun carrying
 * Young carriers likely in uniquely dangerous contexts
 
-## The present study
+## The present study {background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" background-opacity="0.3"}
 
 &nbsp;
 
@@ -102,7 +102,7 @@ But those most vulnerable may **move away** from dangerous places...
 ... or even **die** as a result of that danger
 
 
-## {background-image="img/stephan-cassara-KnAIsBuitGg-unsplash.jpg" background-opacity="0.15"}
+## {background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" background-opacity="0.15"}
 
 
 
@@ -196,7 +196,7 @@ And to understand this, we need to know how it affects...
 
 ## Analysis {background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" background-opacity="0.3"}
 
-* Today: Exploratory analysis
+* Today's exploratory analysis:
    * Linear and ordinal models
    * Covariate control
       * Family background
@@ -208,7 +208,7 @@ And to understand this, we need to know how it affects...
    * Improved measurement
    * More complete model
    * Plausibly identified effects
-      * e.g., Structural nested models
+      * e.g., structural nested models
 
 # Results {.r-fit-text background-image="img/ozzie-stern-dkwJLowVvl4-unsplash.jpg" background-opacity="0.3"}
 
@@ -276,8 +276,8 @@ legend_df <- tibble(
          y = 0.4 - 0.05*row_number(), .by = variable)
 ph_preds |>
   # mutate(color = as.numeric(estimate == max(estimate)), .by = variable) |>
-  ggplot(aes(x = outcome, y = estimate, group = term, fill = term)) +
-  geom_col(show.legend = FALSE, position = "dodge") +
+  ggplot(aes(x = outcome, y = estimate, group = term, fill = term, color = term)) +
+  geom_area(show.legend = FALSE, position = "dodge", alpha = 0.3) +
   scale_fill_manual(values = ph_cols) +
   geom_text(data = legend_df, aes(x = x, y = y, label = term, color = term), show.legend = FALSE) +
   scale_color_manual(values = ph_cols) +
@@ -296,6 +296,7 @@ ph_preds |>
 ## Physical health in adolescence {background-image="img/benjamin-suter-mpLex62zVKQ-unsplash.jpg" background-opacity="0.15"}
 
 ```{r}
+#| eval: false
 col_sex <- khroma::color("bright")(2)
 col_race <- khroma::color("highcontrast")(3)
 col_bin <- rev(gg_color_hue(2))
@@ -326,16 +327,52 @@ ph_preds_4 |>
         plot.background = element_rect(fill = "transparent",colour = NA),
         text = element_text(family = plot_font,  color = "white"))
 ```
+
+```{r}
+col_sex <- khroma::color("bright")(2)
+col_race <- khroma::color("highcontrast")(3)
+col_bin <- rev(gg_color_hue(2))
+
+ph_cols <- c(setNames(col_sex, c("Female", "Male")),
+             setNames(col_bin, c("No", "Yes")),
+             setNames(col_race, c("Black", "Hispanic", "White")))
+
+legend_df <- tibble(
+  variable = factor(c("Sex", "Sex", "Saw someone shot", "Saw someone shot", "Adolescent gun carry", "Adolescent gun carry", "Race", "Race", "Race"), levels = levels(ph_preds$variable)),
+  term = c(c("Female", "Male"), c("No", "Yes"), c("No", "Yes"), c("Black", "Hispanic", "White"))) |>
+  mutate(x = "Fair",
+         y = 0.6 - 0.1*row_number(), .by = variable)
+
+ph_preds_4 |>
+  ggplot(aes(x = outcome, y = estimate, group = term, fill = term, color = term)) +
+  geom_area(show.legend = FALSE, position = "dodge", alpha = 0.3) +
+  scale_fill_manual(values = ph_cols) +
+  geom_text(data = legend_df, aes(x = x, y = y, label = term, color = term), show.legend = FALSE) +
+  scale_color_manual(values = ph_cols) +
+  facet_wrap(~variable, scales = "free_x") +
+  labs(y = "Probability", x = NULL) +
+  theme_minimal(base_size = 16) +
+  theme(panel.spacing.y = unit(16, "pt"),
+        axis.text = element_text(color = "white"),
+        panel.grid = element_blank(),
+        strip.text = element_text(family = plot_font,  color = "white", size = rel(1)),
+        panel.background = element_rect(fill = "transparent",colour = NA),
+        plot.background = element_rect(fill = "transparent",colour = NA),
+        text = element_text(family = plot_font,  color = "white"))
+```
+
 Note: 1996 cohort only
 
 ## Mortality sneak-peek {background-image="img/pedro-lastra-5Bv3EcijAl4-unsplash.jpg" background-opacity="0.15"}
 
+![](img/hazard_mortality.png)
 
 # Takeaways {background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" background-opacity="0.3"}
 
 ## Key results {background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" background-opacity="0.3"}
 
 * Modest but significant associations over time
+* Strong contemporaneous associations
 * Not accounting for mortality censoring or mobility
    * These may suppress (or amplify) associations
 
@@ -366,5 +403,3 @@ For more about the PHDCN+:
 | PHDCN\@fas.harvard.edu
 | <https://sites.harvard.edu/phdcn/>
 | [https://doi.org/10.1007/s40865-022-00203-0](https://sites.harvard.edu/phdcn/)
-
-# Appendix {background-image="img/max-bender-yb7Yg3Rv7WA-unsplash.jpg" background-opacity="0.3"} 
